# FirstCppProject

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/firstcppproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/mqtt/: CMakeLists.txt  mqtthandler.cpp  mqtthandler.h  mqtthelper.cpp  mqtthelper.h  mqttpersistance.cpp  mqttpersistance.h
app/src/main/java/com/example/firstcppproject/: MainActivity.kt  MqttClientHelper.kt  MqttTfRemoteHelper.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/firstcppproject/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
